--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "convue",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A vite based plugin that makes development as easy as nuxt",
   "author": "ziping <ziping@xencapital.com>",
   "license": "MIT",
@@ -20,7 +20,10 @@
     "build": "tsup src/index.ts --dts --format cjs,esm",
     "example:dev": "npm -C example run dev",
     "example:build": "npm -C example run build",
-    "example:serve": "npm -C example run serve"
+    "example:serve": "npm -C example run serve",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:serve": "vitepress serve docs"
   },
   "husky": {
     "hooks": {
@@ -83,6 +86,7 @@
     "typescript": "^4.1.3",
     "url-loader": "^4.1.0",
     "vite": "^2.0.0-beta.50",
+    "vitepress": "^0.12.2",
     "vue": "^3.0.5",
     "vue-i18n": "^9.0.0-rc.6",
     "vue-loader": "^16.0.0-beta.7",
