--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "convue",
-  "version": "1.0.2",
-  "description": "convue is a plugin for vite based on vite and vue3 that gives you a set of experiences for rapid development projects, similar to nuxt and umi.js.Reference documents:https://ziping-li.github.io/convue/.",
+  "version": "1.0.4",
+  "description": "convue is a plugin for vite based on vite and vue3 that gives you a set of experiences for rapid development projects, similar to nuxt and umi.js.",
   "author": "ziping <ziping@xencapital.com>",
   "license": "MIT",
   "repository": {
@@ -14,6 +14,18 @@
   "files": [
     "dist",
     "src"
+  ],
+  "keywords": [
+    "convue",
+    "Convue",
+    "vite",
+    "Vue",
+    "vue3",
+    "plugin",
+    "framework",
+    "cli",
+    "umi",
+    "nuxt"
   ],
   "scripts": {
     "dev": "npm run build -- --watch",
